# wars-sdk

./: .gitmodules  CMakeLists.txt  addresses.csv  type-export-entry.cpp
include/: wars-sdk.h
src/: thunks.asm
wars-api/wars-api/: wars-api.h
wars-api/wars-api/Application/: ResSvCol2.h
wars-api/wars-api/Application/Camera/: CameraBridge.h  CameraService.h
wars-api/wars-api/Application/Graphics/: FxColManager.h  FxParamManager.h  FxParamTimeProgressExtension.h  ResFxColFile2.h  SceneParameters.h
wars-api/wars-api/Application/Level/: LevelInfo.h  PlayerInformation.h  StageData.h  StageInfo.h
wars-api/wars-api/Application/Player/: CharacterId.h  GOCPlayerHsm.h  GOCPlayerKinematicParams.h  GOCPlayerParameter.h  PlayerParameterService.h
wars-api/wars-api/Application/Terrain/: TerrainManager.h
wars-api/wars-api/ApplicationCommon/Camera/: CameraExtension.h  CameraFrame.h  GOCCamera.h  Types.h
wars-api/wars-api/ApplicationCommon/Foundation/: ResRflParameter.h
wars-api/wars-api/Hedgehog/: TArray.h
wars-api/wars-api/Hedgehog/Anim/: ResAnimationHavok.h
wars-api/wars-api/Hedgehog/Effect/: ResEffect.h
wars-api/wars-api/Hedgehog/Font/: ResBitmapFont.h
wars-api/wars-api/Hedgehog/Framework/: AppModule.h  Application.h  FrameworkEnvironment.h  LocalHeap.h  WindowD3D11.h
wars-api/wars-api/Hedgehog/Game/: BucketedGameUpdater.h  CameraComponent.h  CameraManager.h  FreeCamera.h  GOComponent.h  GOComponentRegistry.h  GameApplication.h  GameManager.h  GameObject.h  GameObjectRegistry.h  GameObjectSystem.h  GameService.h  GameUpdater.h  InputComponent.h  InputManager.h  ObjInfo.h  ObjInfoContainer.h  ObjInfoRegistry.h  ObjectId.h  ObjectMap.h  ObjectWorld.h  ObjectWorldChunk.def.h  ObjectWorldChunk.h  ObjectWorldChunkLayer.h  ResObjectWorld.h  WorldObjectStatus.h
wars-api/wars-api/Hedgehog/Graphics/: GOCOcclusionCapsule.h  GOCVisual.h  GOCVisualDebugDraw.h  GOCVisualModel.h  GOCVisualTransformed.h  RenderManager.h  RenderingEngine.h  RenderingEngineNeedle.h  RenderingEngineRangers.h  RenderingEngineWars.h  ResMaterial.h  ResMirageLight.h  ResModel.h  ResModelParameterInterface.h  ResProbe.h  VisibilityManager.h  VisualManager.h
wars-api/wars-api/Hedgehog/GraphicsFoundation/: DrawContext.h  DrawContextNeedle.h  DrawSystem.h  GraphicsContext.h  GraphicsGeometry.h  GraphicsGeometryNeedle.h  RenderManagerBase.h  Renderable.h  ResTexture.h  (+1 more)
wars-api/wars-api/Heuristics/: Reflection.h
wars-api/wars-api/SurfRide/: Animation.h  BinaryData.h  Camera.h  Cell.h  Color.h  Layer.h  Math.h  Project.h  ReferencedObject.h  Scene.h  Text.h  Transform.h  Types.h  UserData.h
(+172 files in other folders)
